--- a/src/style.css
+++ b/src/style.css
@@ -117,6 +117,7 @@ li:nth-of-type(2) {
   border: 2px solid #c1c1c3;
   border-radius: 3px;
   position: relative;
+  -webkit-appearance: none;
   appearance: none;
 }
 
